# rust-vtt

./: .gitignore  .gitpod.dockerfile  .gitpod.yml  Cargo.toml  LICENSE  README.md  build-dev-client.sh  build-dev-wasm.sh  build-lib-debug.sh  build-lib.sh  clippy.toml  index.html  scratch-server.dockerfile  setup-dev-env.sh  watch-dev-client.sh
.github/workflows/: build-vtt.yml  rust.yml  unit-tests.yml
assets/: sdf_shader.wgsl
client-bevy/: Cargo.toml  index.html
client-bevy-native/: Cargo.toml
client-bevy-native/.cargo/: dev.config.toml
client-bevy-native/assets/: sdf_shader.wgsl
client-bevy-native/src/: main.rs
client-bevy/.cargo/: config.toml  dev.config.toml
client-bevy/src/: camera.rs  lib.rs  main.rs  socket.rs
client-bevy/src/communications/: client.rs  mod.rs  server.rs  shared.rs
client-bevy/src/map_construction/: grid_generator.rs  map_zones.rs  mod.rs  signed_distance_functions.rs  tile_generator.rs
client-bevy/src/meshing/: mod.rs
client-bevy/src/sdf_renderer/: Baking Process.md  depth_fragment.wgsl  depth_fragment_second_hit.wgsl  depth_processed_fragment.wgsl  depth_read_fragment.wgsl  full_fragment_secondary_hits.wgsl  mod.rs  old_mod.rs  old_mod.rs.b  sdf_baker.rs  sdf_baker.rs.b  sdf_block_mesher.rs  sdf_brush_binding.rs  sdf_calculator.wgsl  sdf_depth_binding.rs  sdf_lights.rs  sdf_object_zones.rs  sdf_octtree_binding.rs  sdf_operation.rs  sdf_origin.rs  sdf_raw_octtree_pipeline.rs  sdf_raw_render_pipeline.rs  sdf_raw_with_depth_pass_pipeline.rs  sdf_raymarch.wgsl  sdf_raymarch_secondary_hits.wgsl  sdf_raymarch_use_secondary_hits.wgsl  sdf_render_pipeline.rs  sdf_shader.wgsl  sdf_view_binding.rs  structs.wgsl  vertex_full_screen.wgsl
client-bevy/src/sdf_renderer/old shaders/compute/: compute.wgsl
client-bevy/src/sdf_renderer/old shaders/fragment/: depth_fragment.wgsl  depth_read_fragment.wgsl  full_fragment_secondary_hits.wgsl
client-bevy/src/sdf_renderer/old shaders/general/: baked_sdf_reader.wgsl  compute_bindings.wgsl  render_bindings.wgsl  sdf_raymarch.wgsl  sdf_raymarch_find_secondary_hits.wgsl  sdf_raymarch_use_secondary_hits.wgsl  structs.wgsl  zone_object_baked_bindings.wgsl  zone_object_baked_sdf_reader.wgsl
client-bevy/src/sdf_renderer/shaders/compute/: compute.wgsl  raw_octree_baker.wgsl
client-bevy/src/sdf_renderer/shaders/fragment/: fragment_raymarch_calculate_sdf.wgsl  fragment_raymarch_calculate_sdf_lights.wgsl  fragment_raymarch_calculate_sdf_read_depth.wgsl  fragment_raymarch_calculate_sdf_write_depth.wgsl  full_fragment.wgsl  full_fragment_secondary_hits.wgsl
client-bevy/src/sdf_renderer/shaders/general/: baked_render_bindings.wgsl  baked_sdf_reader.wgsl  compute_bindings.wgsl  raw_octree_bake_bindings.wgsl  raw_octree_render_bindings.wgsl  raw_sdf_bindings.wgsl  raw_sdf_depth_bindings.wgsl  render_bindings.wgsl  sdf_calculator.wgsl  sdf_calculator_object_list.wgsl  sdf_calculator_octree_painted.wgsl  sdf_calculator_painted.wgsl  sdf_raymarch.wgsl  sdf_raymarch_find_secondary_hits.wgsl  sdf_raymarch_use_secondary_hits.wgsl  structs.wgsl
client-bevy/src/sdf_renderer/shaders/vertex/: vertex_blocks.wgsl  vertex_full_screen.wgsl
client-godot/: .gitignore  CSGSphere.gdns  client-lib.gdnlib  libclient_lib.dylib  project.godot  test-scene.tscn
client-lib/: Cargo.toml
client-lib/src/: client.rs  lib.rs
pkg/: client_bevy.d.ts  client_bevy.js  client_bevy_bg.wasm.d.ts  package.json
server/: Cargo.toml
server/src/: main.rs
server_lib/: Cargo.toml
server_lib/src/: lib.rs  server.rs
