[workspace]
resolver = "2"

members = [
    "client-lib",
    "client-bevy",
    "client-bevy-native",
    "server",
    "server_lib"
]

[patch.crates-io]
bevy = { git = "https://github.com/lee-orr/bevy", branch = "runs-ui4-migrated" }
bevy_egui = { git = "https://github.com/lee-orr/bevy_egui", branch = "bevy-main"}

[patch."https://github.com/bevyengine/bevy".bevy]
git = "https://github.com/lee-orr/bevy"
branch = "runs-ui4-migrated"

[patch."https://github.com/TheRawMeatball/bevy".bevy]
git = "https://github.com/lee-orr/bevy"
branch = "runs-ui4-migrated"

[patch."https://github.com/jakobhellermann/bevy_egui".bevy_egui]
git = "https://github.com/lee-orr/bevy_egui"
branch = "bevy-main"