[workspace]
resolver = "2"

members = [
    "client-lib",
    "client-bevy",
    "client-bevy-native",
    "server",
    "server_lib"
]

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
bevy_egui = { git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-pipelined"}
