cargo-features = ["edition2021"]
[package]
name = "client-bevy"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [
    "bevy/bevy_gltf2",
    "bevy/png",
    "bevy/bevy_wgpu",
    "bevy/bevy_render2",
    "bevy/bevy_winit",
    "bevy/bevy_pbr2",
    "bevy/bevy_core_pipeline",
    "tokio/rt-multi-thread", 
    "tokio/macros",
    "tokio/time",
    "tokio/sync",
]

native = [
    "tokio/io-std",
    "tokio/net",
    "tokio-tungstenite/connect",
    "server_lib/native",
    "client-lib/native",
]

web = [
#    "bevy_webgl2",
    "winit/web-sys",
    "client-lib/web"
]

dev = [
    "bevy/dynamic",
    "native"
]

[dependencies]
wasm-bindgen = "0.2"
bevy = { version="0.5.0", default-features=false }
winit = {version = "0.25" }
#bevy_webgl2 = { version = "0.5.0", optional = true }
console_error_panic_hook = "0.1"
bevy_egui = "0.7"
server_lib = { path = "../server_lib" }
client-lib = { path = "../client-lib" }
async-compat = "0.2"
crossbeam-channel = "0.5.1"
futures-channel = "0.3"
tokio = { version = "1.0.0", default-features = false }
url = "2.0.0"
tokio-tungstenite = { version = "0.15.0", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
ws_stream_wasm = { version = "0.7", features = ["tokio_io"] }
#ui4 = { git = "https://github.com/TheRawMeatball/ui4"}
[profile.dev]
opt-level = 1

[profile.release]
# lto = true
# opt-level = 's'