[package]
name = "client-lib"
version = "0.1.0"
edition = "2021"

[features]
default = [
    "tokio/rt-multi-thread", 
    "tokio/macros",
    "tokio/time",
    "tokio/sync",
]

native = [
    "tokio/io-std",
    "tokio/net",
    "tokio-tungstenite/connect",
]

web = [
]

[dependencies]
crossbeam-channel = "0.5.1"
futures-channel = "0.3"
tokio = { version = "1.0.0", default-features = false }
url = "2.0.0"
tokio-tungstenite = { version = "0.15.0", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
ws_stream_wasm = { version = "0.7", features = ["tokio_io"] }
serde = { version = "1" }
serde_json = { version = "1" }
