[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
clap = "2"
sled = "0.34"
sled-extensions = { version = "0.2", features=["json"]}
dirs = "4"
serde = "1"
serde_json = "1"
uuid = "0.8"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }