[package]
name = "server_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compat = "0.2"
crossbeam-channel = "0.5.1"
futures-channel = "0.3"
tokio = { version = "1.0.0", default-features = false }
url = "2.0.0"
tokio-tungstenite = { version = "0.15.0", default-features = false }
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
serde = { version = "1" }
serde_json = { version = "1" }